  [timo]

- Make sure the comment brains are updated properly when the content object is 
  renamed.
  [hannosch, timo]

- Make sure only comments to the content object are removed from the catalog
  when the content object is moved.
  [hannosch, timo, davisagli]
  
- Make sure the conversation.getComments method returns acquisition wrapped 
  comments.
  [timo]

- Ukrainian translation added.
	[chervol]

2.0.9 (2011-07-25)
------------------

- Make sure the creator index always stores utf-8 encoded stings and not 
  unicode.
  [timo]


2.0.8 (2011-07-25)
------------------

- Automatically reload batch moderation page if no comments are left. This
  fixes http://dev.plone.org/plone/ticket/11298.
  [timo]

- Use Plone's safe_encode method instead of encode() for the creator index to 
  make sure unicode encoded strings can be indexed too.
  [timo]


2.0.7 (2011-07-15)
------------------

- Fix discussion control panel submit for Google Chrome. This fixes 
  http://dev.plone.org/plone/ticket/11486.


2.0.6 (2011-07-04)
------------------

- Update comment brains in zcatalog when moving a content object with comments.
  This fixes http://dev.plone.org/plone/ticket/11331.
  [timo]
  
- Plone 3 specific exclusion of plone.app.uuid removed.
  [timo]


2.0.5 (2011-06-16)
------------------

- Simplify CSS and JS registrations. CSS will now be imported using the
  standard link and so can be merged, inserted after forms.css. JS will now be
  imported after collapsibleformfields.js.
  [elro]

- Enable the left-menu on the configlet, to be more consistent with all other configlets.
  Related to https://dev.plone.org/plone/ticket/11737
  [WouterVH]

- Do not render/update the comment form in CommentViewlets if commenting is
  disabled, since this slows down the page rendering. This fixes
  http://dev.plone.org/plone/ticket/11930
  [fafhrd]


2.0.4 (2011-05-28)
------------------

- Refactor/clean up the handleComment method.
  [timo]
