@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_workflow">
  <object name="comment_review_workflow" meta_type="Workflow"/>
- <object name="one_state_workflow" meta_type="Workflow"/>
  <bindings>
   <type type_id="Discussion Item">
       <bound-workflow workflow_id="one_state_workflow" />
