@@ -1,106 +1,0 @@
-<?xml version="1.0"?>
-<dc-workflow xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-             i18n:domain="plone"
-             workflow_id="one_state_workflow"
-             title="Comment Single State Workflow"
-             description="Essentially a workflow with no transitions, but has a Published state, so portlets and applications that expect that state will continue to work."
-             state_variable="review_state"
-             initial_state="published"
-             i18n:attributes="title; description">
-
- <permission>Access contents information</permission>
- <permission>Change portal events</permission>
- <permission>List folder contents</permission>
- <permission>Modify portal content</permission>
- <permission>View</permission>
-
- <state state_id="published" title="Published" i18n:attributes="title">
-  <description i18n:translate="">
-    Visible to everyone, editable by the owner.
-  </description>
-  <permission-map name="Access contents information"
-                  acquired="False">
-   <permission-role>Anonymous</permission-role>
-  </permission-map>
-  <permission-map name="Change portal events"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Editor</permission-role>
-  </permission-map>
-  <permission-map name="List folder contents"
-                  acquired="False">
-   <permission-role>Anonymous</permission-role>
-  </permission-map>
-  <permission-map name="Modify portal content"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Editor</permission-role>
-  </permission-map>
-  <permission-map name="View" acquired="False">
-   <permission-role>Anonymous</permission-role>
-  </permission-map>
- </state>
-
- <variable variable_id="action" for_catalog="False"
-           for_status="True" update_always="True">
-  <description i18n:translate="">Previous transition</description>
-  <default>
-   <expression>transition/getId|nothing</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
-
- <variable variable_id="actor" for_catalog="False"
-           for_status="True" update_always="True">
-  <description i18n:translate="">
-    The ID of the user who performed the previous transition
-  </description>
-  <default>
-   <expression>user/getId</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
-
- <variable variable_id="comments" for_catalog="False"
-           for_status="True" update_always="True">
-  <description i18n:translate="">
-    Comment about the last transition
-  </description>
-  <default>
-   <expression>python:state_change.kwargs.get('comment', '')</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
-
- <variable variable_id="review_history" for_catalog="False"
-           for_status="False" update_always="False">
-  <description i18n:translate="">
-    Provides access to workflow history
-  </description>
-  <default>
-   <expression>state_change/getHistory</expression>
-  </default>
-  <guard>
-   <guard-permission>Request review</guard-permission>
-   <guard-permission>Review portal content</guard-permission>
-  </guard>
- </variable>
-
- <variable variable_id="time" for_catalog="False"
-           for_status="True" update_always="True">
-  <description i18n:translate="">
-    When the previous transition was performed
-  </description>
-  <default>
-   <expression>state_change/getDateTime</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
-
-</dc-workflow>
